--- a/static/lens-app/src/app/app.component.html
+++ b/static/lens-app/src/app/app.component.html
@@ -1,4 +1,8 @@
-<!-- NG-ZORRO -->
-<a href="https://github.com/NG-ZORRO/ng-zorro-antd" target="_blank" style="display: flex;align-items: center;justify-content: center;height: 100%;width: 100%;">
+<h1>Strong Lens Classification Demo</h1>
+<app-main-menu></app-main-menu>
+<app-gallery></app-gallery>
+<!-- NG-ZORRO 
+<a href="https://github.com/NG-ZORRO/ng-zorro-antd" target="_blank"
+  style="display: flex;align-items: center;justify-content: center;height: 100%;width: 100%;">
   <img height="300" src="https://img.alicdn.com/tfs/TB1X.qJJgHqK1RjSZFgXXa7JXXa-89-131.svg">
-</a>
+</a>-->
