add generate combined images

--- a/static/lens-app/src/app/gallery/gallery.component.html
+++ b/static/lens-app/src/app/gallery/gallery.component.html
@@ -2,4 +2,7 @@
   <h1>
     Images will be showed here!
   </h1>
+  <img src="assets/combine123/ground_based_100000.png">
 </div>
+<!-- <mat-grid-list cols='20'
+       rowHeight="1:1"></mat-grid-list> -->
