--- a/static/lens-app/src/app/gallery/gallery.component.css
+++ b/static/lens-app/src/app/gallery/gallery.component.css
@@ -1,10 +1,36 @@
-div {
+.image-grid {
   margin: 10px;
-  background: #ECECEC;
   height: 400px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  /* overflow: hidden; */
 }
 
 h1 {
   text-align: center;
   padding-top: 100px;
+}
+
+.image-elem {
+  margin: 0.02rem;
+  height: 72px;
+  width: 72px;
+}
+
+[nz-carousel-content] {
+  text-align: center;
+  height: 400px;
+  /* line-height: 400px; */
+  /* background: #364d79; */
+  background: #ECECEC;
+  color: #fff;
+  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.paginator {
+  margin: auto;
+  text-align: center;
 }
