--- a/static/lens-app/src/app/main-menu/main-menu.component.html
+++ b/static/lens-app/src/app/main-menu/main-menu.component.html
@@ -18,7 +18,7 @@
   </li>
   <li nz-menu-item>
     <i nz-icon type="setting"></i>
-    <nz-switch [ngModel]="true" nzCheckedChildren="With"
+    <nz-switch [(ngModel)]="gpu" nzCheckedChildren="With"
                nzUnCheckedChildren="Without"></nz-switch> GPU
   </li>
   <!--<li nz-submenu>
@@ -58,7 +58,7 @@
     </ul>
   </li>-->
   <li nz-menu-item><i nz-icon type="deployment-unit"></i>
-    <nz-switch [ngModel]="true" nzCheckedChildren="With"
+    <nz-switch [(ngModel)]="ssl" nzCheckedChildren="With"
                nzUnCheckedChildren="Without"></nz-switch> Semi-Supervised
     Learning (SNTG)
   </li>
@@ -68,7 +68,7 @@
     </button>
   </li>
   <li nz-menu-item>
-    <button nz-button nzType="primary" [nzSize]="size">
+    <button nz-button nzType="primary" [nzSize]="size" (click)="runModel()">
       <i nz-icon type="fire"></i>Run
     </button>
   </li>
