--- a/static/lens-app/src/app/records/records.component.html
+++ b/static/lens-app/src/app/records/records.component.html
@@ -1,4 +1,5 @@
-<nz-table #filterTable [nzData]="listOfDisplayData" [nzFrontPagination]="false" [nzShowPagination]="false">
+<nz-table #filterTable [nzData]="listOfDisplayData" [nzFrontPagination]="false"
+          [nzShowPagination]="false">
   <thead (nzSortChange)="sort($event)" nzSingleSort>
     <tr>
       <!--<th nzShowSort nzSortKey="name" nzShowFilter [nzFilters]="listOfName"
@@ -22,9 +23,6 @@
   </thead>
   <tbody>
     <tr *ngFor="let data of filterTable.data">
-      <!--<td>{{ data.name }}</td>
-      <td>{{ data.age }}</td>
-      <td>{{ data.address }}</td>-->
       <td>{{data.id}}</td>
       <td>{{data.dataset}}</td>
       <td>{{data.processor}}</td>
