reload image finish

--- a/static/lens-app/src/app/main-menu/main-menu.component.html
+++ b/static/lens-app/src/app/main-menu/main-menu.component.html
@@ -63,7 +63,7 @@
     Learning (SNTG)
   </li>
   <li nz-menu-item>
-    <button nz-button nzType="primary" [nzSize]="size">
+    <button nz-button nzType="primary" [nzSize]="size" (click)="reLoad()">
       <i nz-icon type="reload"></i>Reload
     </button>
   </li>
